# Ontology_sunburst

./: README.md  class_metabolites.py  obj_extraction.py  ontology.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
Inputs/: classes.json
Inputs_generation/: gen_onto_files.py
ontosunburst/: __init__.py  __main__.py  class_metabolites.py  dag2tree.py  data_table_tree.py  obj_extraction.py  objects_extraction.py  onto2dag.py  ontology.py  ontosunburst.py  sunburst_fig.py  tree2sunburst.py
ontosunburst/Inputs/: MetaCyc26_0_classes.json  chebi_r__239__classes.json  chebi_r__239__labels.json  chebi_roles239_classes.json  chebi_roles239_names.json  chebi_roles_239_classes.json  chebi_roles_239_names.json  ec_05feb25_classes.json  ec_05feb25_names.json  go_bp_06feb25_names.json  go_bp__06feb25__classes.json  go_mf__06feb25__classes.json  go_mf__06feb25__labels.json  kegg113_0_classes.json  kegg_113_0_classes.json  kegg__113-0__classes.json  metacyc_26-0_classes.json  metacyc__26-0__classes.json
ontosunburst/Inputs_generation/: gen_onto_files.py
tests/: ontosunburst_test.py
tests/expected_figures/: test_ec_prop.html  test_mc_cpd_comp.html  test_mc_cpd_prop.html  test_mc_pwy_prop.html  test_mc_rxn_comp.html  test_mc_rxn_prop.html
tests/expected_figures/html/: test_chebi_comp.html  test_chebi_prop.html  test_ec_comp.html  (+7 more)
tests/global_test/: command_line_tests.py  workflow_test.py
tests/unit_tests/: chebi_serv_tests.py  data_table_tree_tests.py  go_serv_tests.py  onto2dag_tests.py  ontology_tests.py  ontosunburst_tests.py  sunburst_fig_test.py
(+33 files in other folders)
